# TianXing

./: .gitignore  README.md  README_CN.md  config.example.yaml  pyproject.toml
commands/: review-loop.md  revise-loop.md
paper_review_tools/: __init__.py  checkpoint_repo.py  collect_metrics.py  run_tests.py  utils.py
prompts/: planner.md  reviewer.md  revision_auditor.md  revision_implementer.md  revision_planner.md  revision_reflector.md  revision_verifier.md  revision_writeback.md  rewriter.md  summarizer.md
scripts/: setup_project.sh
skills/review-loop/: SKILL.md
templates/: .gitignore.example  AGENT.md  claude-settings.json
tests/: test_experiment_map.py  test_revision_schemas.py  test_revision_setup.py  test_revision_smoketest.py  test_revision_state.py  test_tools.py  test_utils.py
tianxing/: __init__.py  compile_paper.py  experiment_map.py  notify_status.py  record_round.py  rollback_repo.py  run_tests.py  update_status.py  utils.py
tianxing/revision/: __init__.py  claim_registry.py  claude_worker.py  experiment_runner.py  file_ops.py  result_registry.py  revision_executor.py  revision_loop.py  revision_setup.py  revision_state.py  revision_state_cli.py  schemas.py
