[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tianxing"
version = "0.1.0"
description = "Automated paper review and improvement tools for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
]

[project.scripts]
tianxing = "tianxing.__init__:main"

[tool.setuptools.packages.find]
include = ["tianxing*"]
